# pgui

./: .gitignore  CMakeLists.txt  LICENSE  README.org
src/: pgui_str.c  pgui_str.h  pgui_table.c  pgui_table.h
src/editor/: README.org  main.c
src/render/: common.h  log.c  log.h  opengl.h  shader.c  shader.h
test/: test_pgui_table.c
